--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
   "require-dev": {
     "phpunit/phpunit": "^4.8.35|~5.7"
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "stable"
 }
