--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "neoistone/php-routing",
+    "name": "neoistone/routing",
     "description": "Smiple Routing System PHP",
     "authors": [
         {
