--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Jordi Boggiano",
-            "email": "support@neoistone.com",
+            "name": "Manikanta Sripadi",
+            "email": "manikantasripadi@neoistone.com",
             "homepage": "http://manikantasripadi.neoistone.com",
             "role": "Developer"
         }
